// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell align 1`] = `
<cell-element__CellElement
  align="top"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 gQYuNB"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell auto layout with margin gutter 1`] = `
<cell-element__CellElement
  cellType="auto"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  gutterType="margin"
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 dSivvj"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell auto layout with padding gutter 1`] = `
<cell-element__CellElement
  cellType="auto"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  gutterType="padding"
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 gmgivH"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell base layout 1`] = `
<cell-element__CellElement
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 PmlGH"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell offset 1`] = `
<cell-element__CellElement
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  smallOffset={1}
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 jZRgNI"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell shrink layout 1`] = `
<cell-element__CellElement
  cellType="shrink"
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 dmOHfr"
  >
    test
  </div>
</cell-element__CellElement>
`;

exports[`cell with 6 small layout 1`] = `
<cell-element__CellElement
  className="gc-cell"
  gridColumns={12}
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  small={6}
  vertical={false}
>
  <div
    className="gc-cell cell-element__CellElement-sc-6s0nu0-0 cLtsJL"
  >
    test
  </div>
</cell-element__CellElement>
`;
